--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
+body {
+  background: #EDFFA9#B0EFEB#FDBAF8;
+}
+
 .App-header {
-  font-size: larger;
-  margin: 30px 0;
+  font-size: 36px;
+  margin: 35px 0 -15px 35px;
+  color: #9c27b0;
+  font-weight: 500;
 }
 
 .App-footer {
   text-align: center;
   margin: 30px 0;
+  color: #6e6d70;
+}
+.App-footer a {
+  color: #dd83eb;
 }
