--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,1 +1,46 @@
+.Dictionary section {
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 15px rgba(78, 77, 77, 0.1);
+  margin: 20px 0;
+}
+.Dictionary h3 {
+  padding-bottom: 10px;
+}
+.Dictionary input {
+  color: #6e6d70;
+  width: 100%;
+  padding: 6px 4px;
+  border: 1px solid #e5e5e6;
+  border-radius: 6px;
+  background-image: url(https://cdn2.hubspot.net/hubfs/4004166/bioticresearch_website_assets/images/search_icon.png);
+  background-repeat: no-repeat;
+  background-position: right center;
+  -webkit-appearance: none;
+}
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+  appearance: none;
+}
+.Dictionary input:focus,
+textarea:focus {
+  border-radius: 5px;
+  border: 1px solid #edb8f5 !important;
+  box-shadow: 0 0 3px #edb8f5 !important;
+  -moz-box-shadow: 0 0 3px #edb8f5 !important;
+  -webkit-box-shadow: 0 0 3px #edb8f5 !important;
+}
+.Dictionary input:focus,
+textarea:focus,
+select:focus {
+  outline-offset: 0px !important;
+  outline: none !important;
+}
 
+.Dictionary .hint {
+  font-size: 14px;
+  color: #858486;
+  margin-top: 5px;
+}
