--- a/src/Phonetics.css
+++ b/src/Phonetics.css
@@ -3,7 +3,7 @@
   border: 1px solid #b4b3b5;
   border-radius: 20px;
   padding: 3px;
-  margin-right: 10px;
+  margin: 5px 10px;
   transition: all 150ms ease-in-out;
 }
 .Phonetics .icon:hover {
